Fixes gap between guild list and channel list

--- a/src/chat/chat.scss
+++ b/src/chat/chat.scss
@@ -160,7 +160,3 @@
 .notice-2FJMB4 {
     border-radius: 0;
 }
-
-.base-3dtUhz {
-    left: 70px;
-}
